[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "polars",
  "sklearn",
  "scipy",
]
requires-python = ">=3.12"
authors = [
  {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
maintainers = [
  {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"}
]
description = "{{ cookiecutter.description }}"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  # More details: https://pypi.org/classifiers/

  # How mature is this project?
  #   1 - Planning
  #   2 - Pre-Alpha
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 1 - Planning",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "{{ cookiecutter.github_url }}"
Documentation = "https://readthedocs.org"
Repository = "{{ cookiecutter.github_url }}.git"
"Bug Tracker" = "{{ cookiecutter.github_url }}/issues"
Changelog = "{{ cookiecutter.github_url }}/blob/master/CHANGELOG.md"

[project.scripts]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.cli.main:main"
