[metadata]
name = {{ cookiecutter.package_name }}
version = 0.0.1
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.description }}
url = {{ cookiecutter.github_url }}
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: {% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %} License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = {{ cookiecutter.github_url }}/issues

[options]
package_dir =
     = src
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    pandas
    sklearn
    scipy

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.{{ cookiecutter.package_name }}:main
